@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclFCmd.c,v 1.13 2001/09/08 14:05:09 vincentdarley Exp $
+ * RCS: @(#) $Id: tclFCmd.c,v 1.14 2001/10/15 10:30:07 vincentdarley Exp $
  */
 
 #include "tclInt.h"
@@ -406,11 +406,11 @@ TclFileDeleteCmd(interp, objc, objv)
 		    Tcl_GetString(errfile), "\": ", 
 		    Tcl_PosixError(interp), (char *) NULL);
 	}
-	if (errorBuffer != NULL) {
-	    Tcl_DecrRefCount(errorBuffer);
-	}
     } 
     done:
+    if (errorBuffer != NULL) {
+	Tcl_DecrRefCount(errorBuffer);
+    }
     return result;
 }
 
